{
    "name": "BuilderDefenderActions",
    "maps": [
        {
            "name": "Building",
            "id": "08fb4404-ed7c-4fbc-8605-423aefd4a864",
            "actions": [
                {
                    "name": "Place",
                    "type": "Button",
                    "id": "b07a0f33-707e-4e9a-a2f3-d6d7177219b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Remove",
                    "type": "Button",
                    "id": "eecbf8c3-ca67-4e56-a9a2-35980319aa08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointPosition",
                    "type": "Value",
                    "id": "1ed4510a-82a7-480c-98bb-da70eef5d18b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "05f6913d-c316-48b2-a6bb-e225f14c7960",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbbafc61-c33d-4285-8f87-c74eabf83858",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Remove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16484a22-3904-4071-bd1f-fe3ec7ce7f42",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "PointPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "f6d0a9e7-705a-4ef5-a064-457039fc8a91",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "PassThrough",
                    "id": "80df7745-c249-43fd-8a46-3f505db9f71e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "PassThrough",
                    "id": "15c573e7-afe9-431e-8ea2-239194ddfa59",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollUp",
                    "type": "PassThrough",
                    "id": "f80a40ce-f7f0-48c7-adea-3562731e612f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollDown",
                    "type": "PassThrough",
                    "id": "12b05e14-5115-42fd-b4fc-4b6b9d861705",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AWSD",
                    "id": "b32d0eec-0913-481a-bbec-eb9812b7ba8b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ee99a03-adc5-438f-9092-9f3f22237828",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a3996f84-5515-4f7f-94b1-095427c1c357",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "78774b51-0ecf-46b0-a441-4427ab27bf8a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1d8e5730-564d-43cf-b379-95b632c9c517",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MouseScroll",
                    "id": "059e325a-f677-4cd2-833c-42b3a84a1aaf",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "21650c55-116d-4884-aec9-9bfa19241529",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "4216497f-20a6-4d40-879b-af48e4769e56",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ctrl + numPlus",
                    "id": "5b139d1a-520b-4d26-ba3d-aa0389f239ed",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollUp",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "131edb2c-3a5c-4687-b527-b9e4a843eeed",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollUp",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "3ec84c7c-eedf-4a7a-a21d-e10564d4600e",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollUp",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ctrl + plus",
                    "id": "c3ff11c0-7a35-40e5-9cef-f5736691cd77",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollUp",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "46ec62c4-cffa-48c7-852a-145f5a079acd",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollUp",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "3f9bef51-098f-47a2-8b36-28654d598922",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollUp",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ctrl + numMinus",
                    "id": "a83f59e7-9d2d-44a4-ab99-17d54e94fec5",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "6c1598fb-d629-4ab6-ae54-d1b92210b917",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "bf758a37-c0c4-44ec-8f56-13d99f00797d",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ctrl + Minus",
                    "id": "28fe7de3-afc9-4911-94ec-bf70b4854d6b",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "71371fa7-722b-4177-b36e-c8cc40507b2f",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "5e6b7aa9-9fb8-4a4a-8218-64b37f07d912",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "91d521e3-e6bd-4fda-b9bb-a575ad97cdf1",
            "actions": [
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "23c9ea74-8eaa-417a-bc10-51d38f29ef57",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "f2b4e5da-bc1b-4383-bc34-dfd584f67ede",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstHotbar",
                    "type": "Button",
                    "id": "5371c3a3-c7cf-4a59-8765-77a634804a85",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondHotbar",
                    "type": "Button",
                    "id": "22e0841a-feea-4c03-a72f-b97e10106aaa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThirdHotbar",
                    "type": "Button",
                    "id": "4ec84282-0c5f-4954-879f-80dc4b1a36cb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FourthHotbar",
                    "type": "Button",
                    "id": "b0bb6b66-79c2-4dd1-a13e-26a6e93e354b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FifthHotbar",
                    "type": "Button",
                    "id": "8ba6f01f-7d5c-4fbe-a70e-180ce0d8c152",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "82627dcc-3b13-4ba9-841d-e4b746d6553e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8cee050-a276-45b0-96f1-2513c4829a53",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a9e63e0-d766-491d-94a0-422061acb66c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "FirstHotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdba3706-7d3b-4146-ae52-8662ef047efc",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "SecondHotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "992388f1-b35a-434a-965e-07bb84792a7c",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "ThirdHotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90c4dd9c-b9fe-4593-a768-3fd3e6540454",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "FourthHotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2275cd9a-a3cf-4d6e-8e21-ce929d37664c",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "FifthHotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}